# decode-orc

./: BUILD.md  CMakeLists.txt  TESTING.md  flake.nix  io.github.simoninns.decode-orc.yml  vcpkg.json
.github/: copilot-instructions.md
docs/: performance-testing.md  preview-refactor-plan.md  (+2 more)
orc-tests/core/: CMakeLists.txt
orc-tests/core/include/: file_io_interface_mock.h  observation_context_interface_mock.h
orc-tests/core/stages/daphne_vbi_sink/: daphne_vbi_writer_util_test.cpp
orc-tests/core/unit/: CMakeLists.txt
orc-tests/core/unit/contracts/: project_to_dag_contract_test.cpp  public_stage_contract_test.cpp  stage_registry_contract_test.cpp
orc-tests/core/unit/include/: public_stage_inventory.h  video_field_representation_mock.h
orc-tests/core/unit/preview_types/: preview_view_registry_test.cpp
orc-tests/core/unit/stages/: stage_factories_interface_mock.h
orc-tests/core/unit/stages/audio_sink/: audio_sink_stage_test.cpp
orc-tests/core/unit/stages/burst_level_analysis_sink/: burst_level_analysis_sink_stage_test.cpp
orc-tests/core/unit/stages/cc_sink/: cc_sink_stage_test.cpp
orc-tests/core/unit/stages/chroma_sink/: chroma_sink_stage_defaults_test.cpp  componentframe_test.cpp  vectorscope_analysis_test.cpp
orc-tests/core/unit/stages/dropout_analysis_sink/: dropout_analysis_sink_stage_test.cpp
orc-tests/core/unit/stages/ld_sink/: ld_sink_stage_deps_interface_mock.h  ld_sink_stage_deps_test.cpp  ld_sink_stage_test.cpp  tbc_metadata_writer_interface_mock.h
orc-tests/core/unit/stages/ntsc_yc_source/: ntsc_yc_source_stage_test.cpp
(+139 files in other folders)
